modificacion de token en branches